--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,5 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  password_digest: MyString
-
-two:
-  name: MyString
-  password_digest: MyString
+  name: test-user
+  password_digest: $2a$10$/oRX.dqNycuY0yqj62G3Q.uppyrlt5balAgD19OpdVyn.ffAX40mu
